Trying to generate documentation using modified sconstruct taken from Clock add-on, maintained by @abdel792

--- a/sconstruct
+++ b/sconstruct
@@ -3,6 +3,7 @@
 #This file is covered by the GNU General Public License.
 #See the file COPYING.txt for more details.
 
+import codecs
 import gettext
 import os
 import os.path
@@ -18,7 +19,7 @@ def md2html(source, dest):
 	lang = os.path.basename(os.path.dirname(source)).replace('_', '-')
 	localeLang = os.path.basename(os.path.dirname(source))
 	try:
-		_ = gettext.translation("nvda", localedir=os.path.join("addon", "locale"), languages=[localeLang]).gettext
+		_ = gettext.translation("nvda", localedir=os.path.join("addon", "locale"), languages=[localeLang]).ugettext if sys.version_info.major == 2 else gettext.translation("nvda", localedir=os.path.join("addon", "locale"), languages=[localeLang]).gettext
 		title=u"{0}".format(_(buildVars.addon_info["addon_summary"]))
 	except:
 		title="{0}".format(buildVars.addon_info["addon_summary"]) 
@@ -26,12 +27,13 @@ def md2html(source, dest):
 		"[[!meta title=\"": "# ",
 		"\"]]": " #",
 	}
-	with open(source, 'r', encoding="utf_8") as f:
+	with codecs.open(source, "r", "utf-8") as f:
 		mdText = f.read()
-		for k, v in headerDic.items():
+		headerList = headerDic.iteritems () if sys.version_info.major == 2 else list(headerDic.items())
+		for k, v in headerList:
 			mdText = mdText.replace(k, v, 1)
 		htmlText = markdown.markdown(mdText)
-	with open(dest, 'w', encoding="utf_8") as f:
+	with codecs.open(dest, "w", "utf-8") as f:
 		f.write("<!DOCTYPE html>\n" +
 			"<html lang=\"%s\">\n" % lang +
 			"<head>\n" +
@@ -106,14 +108,14 @@ def createAddonBundleFromPath(path, dest):
 	return dest
 
 def generateManifest(source, dest):
-	with open(source, 'r', encoding="utf_8") as f:
+	with codecs.open(source, "r", "utf-8") as f:
 		manifest_template = f.read()
 	manifest = manifest_template.format(**buildVars.addon_info)
-	with open(dest, 'w', encoding="utf_8") as f:
+	with codecs.open(dest, "w", "utf-8") as f:
 		f.write(manifest)
 
 def generateTranslatedManifest(source, language, out):
-	_ = gettext.translation("nvda", localedir=os.path.join("addon", "locale"), languages=[language]).gettext
+	_ = gettext.translation("nvda", localedir=os.path.join("addon", "locale"), languages=[language]).ugettext if sys.version_info.major == 2 else gettext.translation("nvda", localedir=os.path.join("addon", "locale"), languages=[language]).gettext
 	vars = {}
 	for var in ("addon_summary", "addon_description"):
 		if isinstance(buildVars.addon_info[var], str):
@@ -123,10 +125,10 @@ def generateTranslatedManifest(source, language, out):
 		else:
 			raise TypeError("Error with %s key in buildVars" % var)
 
-	with open(source, 'r', encoding="utf_8") as f:
+	with codecs.open(source, "r", "utf-8") as f:
 		manifest_template = f.read()
 	result = manifest_template.format(**vars)
-	with open(out, 'w', encoding="utf_8") as f:
+	with codecs.open(out, "w", "utf-8") as f:
 		f.write(result)
 
 def expandGlobs(files):
