--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,13 +1,16 @@
-name: Lint diff
+name: Lint
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
 
-  diff:
+  lint:
 
     runs-on: windows-latest
 
@@ -15,8 +18,6 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
@@ -24,19 +25,4 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
     - name: Lint
-      run: |
-        git diff -U0 origin/master...HEAD -- addon/. > flake8.diff
-        type flake8.diff | flake8 --diff --output-file=flake8.txt --tee
-    - name: Comment on PR
-      uses: actions/github-script@v3
-      if: failure()
-      with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        script: |
-          github.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: 'This PR introduces flake8 errors'
-          })
-          
+      run: flake8 addon
