--- a/.github/workflows/upload-on-tag.yaml
+++ b/.github/workflows/upload-on-tag.yaml
@@ -31,6 +31,12 @@ jobs:
           f.write(text)
           f.truncate()
       shell: python 
+    - name: Push changes
+      run: |
+        git config --global user.name github-actions
+        git config --global user.email github-actions@github.com
+        git commit -a -m "Update buildVars"
+        git push origin HEAD:main
     - name: Build add-on
       run: scons
     - name: Calculate sha256
