--- a/.github/workflows/automaticRelease.yaml
+++ b/.github/workflows/automaticRelease.yaml
@@ -10,28 +10,5 @@ on:
 
 jobs:
   pre-release:
-    name: Pre Release
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        pip install scons markdown
-        sudo apt update
-        sudo apt install gettext
-    - name: Build
-      run: scons version=${{ github.sha }}
-    - name: Automatic release
-      uses: marvinpinto/action-automatic-releases@latest
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        automatic_release_tag: latest
-        prerelease: true
-        title: Development Build
-        files: |
-          *.nvda-addon
+    uses: nvdaes/nvdaAddonWorkflows/.github/workflows/automaticRelease.yaml@main
+    
