--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@ addon/doc/*.css
 addon/doc/en/
 *_docHandler.py
 *.html
-*.ini
+addon/*.ini
+addon/locale/*/*.ini
 *.mo
 *.pot
-*.py[co]
+*.pyc
 *.nvda-addon
 .sconsign.dblite
-.vscode
