--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,12 @@
+
 # https://pre-commit.ci/
 # Configuration for Continuous Integration service
 ci:
-  # Borrowed from NVDA repo
-  # https://github.com/nvaccess/nvda
-  # Can't run Windows scons scripts on Linux.
-  # unit testing requires our python environment,
-  # which cannot be configured with pre-commit.ci:
-  # https://stackoverflow.com/questions/70778806/pre-commit-not-using-virtual-environment .
-  # Can't run licenseCheck as it relies on telemetry,
-  # which CI blocks.
+  skip: [pyrightLocal]
   autoupdate_schedule: monthly
   autoupdate_commit_msg: "Pre-commit auto-update"
   autofix_commit_msg: "Pre-commit auto-fix"
+  submodules: true
 
 default_language_version:
   python: python3.11
@@ -37,8 +32,6 @@ repos:
       args: ["--branch", "main"]
     # Checks that large files have not been added. Default cut-off for "large" files is 500kb.
     - id: check-added-large-files
-      # POFiles and TTF fonts can't be made smaller
-      exclude_types: ["pofile", "ttf"]
     # Checks python syntax
     - id: check-ast
     # Checks for filenames that will conflict on case insensitive filesystems (the majority of Windows filesystems, most of the time)
@@ -49,18 +42,19 @@ repos:
     - id: debug-statements
     # Removes trailing whitespace.
     - id: trailing-whitespace
-      types_or: [python, c, c++, batch, markdown]
+      types_or: [python, markdown, toml, yaml]
     # Ensures all files end in 1 (and only 1) newline.
     - id: end-of-file-fixer
-      types_or: [python, c, c++, batch, markdown]
+      types_or: [python, markdown, toml, yaml]
     # Removes the UTF-8 BOM from files that have it.
     # See https://github.com/nvaccess/nvda/blob/master/projectDocs/dev/codingStandards.md#encoding
     - id: fix-byte-order-marker
-      types_or: [python, c, c++, batch, markdown]
+      types_or: [python, markdown, toml, yaml]
     # Validates TOML files.
     - id: check-toml
     # Validates YAML files.
     - id: check-yaml
+    # Validates XML files.
     # Ensures that links to lines in files under version control point to a particular commit.
     - id: check-vcs-permalinks
     # Avoids using reserved Windows filenames.
@@ -75,7 +69,7 @@ repos:
   - id: add-trailing-comma
 
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  # Matches Ruff version in requirements.
+  # Matches Ruff version in pyproject.
   rev: v0.8.1
   hooks:
     - id: ruff
@@ -83,3 +77,20 @@ repos:
       args: [ --fix ]
     - id: ruff-format
       name: format with ruff
+
+- repo: https://github.com/RobertCraigie/pyright-python
+  rev: v1.1.394
+  hooks:
+  - id: pyright
+    alias: pyrightLocal
+    name: Check types with pyright
+
+- repo: https://github.com/RobertCraigie/pyright-python
+  rev: v1.1.396
+  hooks:
+  - id: pyright
+    alias: pyrightCI
+    name: Check types with pyright
+    # use nodejs version of pyright and install pyproject.toml for CI
+    additional_dependencies: [".", "pyright[nodejs]"]
+    stages: [manual]  # Only run from CI manually
